Working training notebook

--- a/MS-ViT.ipynb
+++ b/MS-ViT.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "from torch.optim import Adam\n",
-    "from torch.nn import CrossEntropyLoss\n",
+    "from torch import optim, nn\n",
     "from torch.utils.data import TensorDataset, DataLoader, Dataset\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -19,26 +18,16 @@
     "import math\n",
     "import ast\n",
     "from scipy.signal import find_peaks\n",
-    "import pywt"
+    "import pywt\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUDA is available.\n",
-      "PyTorch version: 2.1.0+cu121\n",
-      "CUDA version: 12.1\n",
-      "Number of available GPUs: 1\n",
-      "GPU name: NVIDIA GeForce RTX 4060 Laptop GPU\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if torch.cuda.is_available():\n",
     "    print(\"CUDA is available.\")\n",
@@ -52,17 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using device: cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")"
@@ -70,25 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_32599/2771391255.py:1: DtypeWarning: Columns (6,7,10,12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('data/MoNA/in-silico.csv')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('data/MoNA/in-silico.csv') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,20 +123,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"def fourier_tokenization_2d(binned_spectrum, window_size=16):\\n    # Perform FFT\\n    fft = np.fft.fft(binned_spectrum)\\n    magnitude_spectrum = np.abs(fft[:len(fft)//2])\\n    \\n    # Pad the spectrum if necessary\\n    if len(magnitude_spectrum) % (window_size * window_size) != 0:\\n        pad_length = window_size * window_size * (len(magnitude_spectrum) // (window_size * window_size) + 1) - len(magnitude_spectrum)\\n        magnitude_spectrum = np.pad(magnitude_spectrum, (0, pad_length), mode='constant')\\n    \\n    # Reshape into 2D\\n    num_windows = len(magnitude_spectrum) // (window_size * window_size)\\n    reshaped = magnitude_spectrum.reshape(num_windows, window_size, window_size)\\n    \\n    # Flatten each window\\n    return reshaped.reshape(num_windows, -1).tolist()\\n\\ndef wavelet_tokenization_2d(binned_spectrum, window_size=16, wavelet='db1'):\\n    # Perform wavelet transform\\n    coeffs = pywt.wavedec(binned_spectrum, wavelet)\\n    \\n    # Concatenate all levels\\n    flat_coeffs = np.concatenate(coeffs)\\n    \\n    # Pad if necessary\\n    if len(flat_coeffs) % (window_size * window_size) != 0:\\n        pad_length = window_size * window_size * (len(flat_coeffs) // (window_size * window_size) + 1) - len(flat_coeffs)\\n        flat_coeffs = np.pad(flat_coeffs, (0, pad_length), mode='constant')\\n    \\n    # Reshape into 2D\\n    num_windows = len(flat_coeffs) // (window_size * window_size)\\n    reshaped = flat_coeffs.reshape(num_windows, window_size, window_size)\\n    \\n    # Flatten each window\\n    return reshaped.reshape(num_windows, -1).tolist()\""
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''def fourier_tokenization_2d(binned_spectrum, window_size=16):\n",
     "    # Perform FFT\n",
@@ -205,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +209,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_tokenization(spectrum, method, max_mz, window_size=16):\n",
+    "    tokenized = tokenize_spectrum(spectrum, method, max_mz, window_size)\n",
+    "    \n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    \n",
+    "    if method == 'peak':\n",
+    "        plt.scatter(tokenized[:, 0], tokenized[:, 1])\n",
+    "        plt.xlabel('m/z')\n",
+    "        plt.ylabel('Intensity')\n",
+    "        plt.title(f'Peak Tokenization (Top {tokenized.shape[0]} peaks)')\n",
+    "    else:\n",
+    "        plt.imshow(tokenized, aspect='auto', interpolation='nearest')\n",
+    "        plt.colorbar(label='Intensity')\n",
+    "        plt.xlabel('Feature')\n",
+    "        plt.ylabel('Token')\n",
+    "        plt.title(f'{method.capitalize()} Tokenization')\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "# Function to get a sample spectrum\n",
+    "def get_sample_spectrum(df):\n",
+    "    return df['spectrum'].iloc[0]\n",
+    "\n",
+    "# Visualize each method\n",
+    "max_mz = calculate_max_mz(df)\n",
+    "sample_spectrum = get_sample_spectrum(df)\n",
+    "for method in ['direct', 'peak', 'fourier2', 'wavelet2']:\n",
+    "    visualize_tokenization(sample_spectrum, method, max_mz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for method in ['direct', 'peak', 'fourier2', 'wavelet2']:\n",
+    "    print(tokenize_spectrum(sample_spectrum, method, max_mz, 16).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,17 +279,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Maximum m/z value across all spectra: 3533\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate max_mz\n",
     "max_mz = calculate_max_mz(df)\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,130 +319,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Defining the transformer model\n",
-    "class MS_VIT(nn.Module):\n",
-    "    def __init__(self, num_classes, embed_dim=40, depth=12, num_heads=2):\n",
-    "        super(MS_VIT, self).__init__()\n",
-    "        self.embedding = nn.Linear(16, embed_dim)  # Assume 16 features per token\n",
-    "        self.transformer = nn.TransformerEncoder(\n",
-    "            nn.TransformerEncoderLayer(d_model=embed_dim, nhead=num_heads),\n",
-    "            num_layers=depth\n",
-    "        )\n",
-    "        self.fc = nn.Linear(embed_dim, num_classes)\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import math\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        # x shape: (batch_size, seq_length, 16)\n",
-    "        batch_size, seq_length, _ = x.shape\n",
-    "        x = x.view(batch_size * seq_length, -1)  # Reshape to (batch_size * seq_length, 16)\n",
-    "        x = self.embedding(x)  # Shape: (batch_size * seq_length, embed_dim)\n",
-    "        x = x.view(batch_size, seq_length, -1)  # Reshape back to (batch_size, seq_length, embed_dim)\n",
-    "        x = x.permute(1, 0, 2)  # Shape: (seq_length, batch_size, embed_dim)\n",
-    "        x = self.transformer(x)\n",
-    "        x = x.mean(dim=0)  # Global average pooling\n",
-    "        x = self.fc(x)\n",
-    "        return x\n",
-    "    \n",
     "class PositionalEncoding(nn.Module):\n",
-    "    def __init__(self, d_model, max_length=5000):\n",
-    "        super(PositionalEncoding, self).__init__()\n",
-    "        pe = torch.zeros(max_length, d_model)\n",
-    "        position = torch.arange(0, max_length, dtype=torch.float).unsqueeze(1)\n",
-    "        div_term = torch.exp(torch.arange(0,d_model,2)).float() * (-math.log(10000.0)/d_model)\n",
-    "        pe[:, 0::2] = torch.sin(position * div_term)\n",
-    "        pe[:, 1::2] = torch.cos(position * div_term)\n",
-    "        pe = pe.unsqueeze(0).transpose(0,1)\n",
+    "    def __init__(self, d_model, max_len=5000):\n",
+    "        super().__init__()\n",
+    "        position = torch.arange(max_len).unsqueeze(1)\n",
+    "        div_term = torch.exp(torch.arange(0, d_model, 2) * (-math.log(10000.0) / d_model))\n",
+    "        pe = torch.zeros(max_len, 1, d_model)\n",
+    "        pe[:, 0, 0::2] = torch.sin(position * div_term)\n",
+    "        pe[:, 0, 1::2] = torch.cos(position * div_term)\n",
     "        self.register_buffer('pe', pe)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = x + self.pe[:x.size(0), :]\n",
-    "        return x\n",
-    "\n"
+    "        return x + self.pe[:x.size(0)]\n",
+    "\n",
+    "class MS_VIT(nn.Module):\n",
+    "    def __init__(self, num_classes, embed_depth=16, d_model=256, nhead=8, num_layers=6, dim_feedforward=2048, dropout=0.1):\n",
+    "        super().__init__()\n",
+    "        self.d_model = d_model\n",
+    "        # Initial embedding layer\n",
+    "        self.embedding = nn.Linear(embed_depth, d_model)\n",
+    "        # Positional encoding\n",
+    "        self.pos_encoder = PositionalEncoding(d_model)\n",
+    "        # Transformer encoder\n",
+    "        encoder_layers = nn.TransformerEncoderLayer(d_model, nhead, dim_feedforward, dropout)\n",
+    "        self.transformer_encoder = nn.TransformerEncoder(encoder_layers, num_layers)\n",
+    "        # Final classification layer\n",
+    "        self.fc = nn.Linear(d_model, num_classes)\n",
+    "        \n",
+    "        self.init_weights()\n",
+    "\n",
+    "    def init_weights(self):\n",
+    "        initrange = 0.1\n",
+    "        self.embedding.weight.data.uniform_(-initrange, initrange)\n",
+    "        self.fc.bias.data.zero_()\n",
+    "        self.fc.weight.data.uniform_(-initrange, initrange)\n",
+    "\n",
+    "    def forward(self, src):\n",
+    "        # src shape: (batch_size, seq_length, 16)\n",
+    "        # Embed the input\n",
+    "        src = self.embedding(src) * math.sqrt(self.d_model)\n",
+    "        # Add positional encoding\n",
+    "        src = self.pos_encoder(src.transpose(0, 1))\n",
+    "        # Pass through transformer encoder\n",
+    "        output = self.transformer_encoder(src)\n",
+    "        # Global average pooling\n",
+    "        output = output.mean(dim=0)\n",
+    "        # Classification\n",
+    "        output = self.fc(output)\n",
+    "        \n",
+    "        return output\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Training function\n",
     "def train_model(model, train_loader, test_loader, optimizer, criterion, num_epochs=50):\n",
-    "    device = next(model.parameters()).device  # Get the device the model is on\n",
+    "    device = next(model.parameters()).device\n",
     "    \n",
     "    for epoch in range(num_epochs):\n",
     "        model.train()\n",
+    "        total_loss = 0\n",
+    "        \n",
+    "        # progress bar\n",
+    "        train_pbar = tqdm(train_loader, desc=f'Epoch {epoch+1}/{num_epochs} [Train]', leave=False)\n",
+    "    \n",
     "        for x_batch, y_batch in train_loader:\n",
     "            x_batch, y_batch = x_batch.to(device), y_batch.to(device)\n",
+    "            \n",
+    "            # Reshape input: (batch_size, 1, seq_length, 16) -> (batch_size, seq_length, 16)\n",
+    "            x_batch = x_batch.squeeze(1)\n",
+    "            \n",
     "            optimizer.zero_grad()\n",
     "            outputs = model(x_batch)\n",
     "            loss = criterion(outputs, y_batch)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
+    "            \n",
+    "            total_loss += loss.item()\n",
+    "\n",
+    "            # Update progress bar description with current loss\n",
+    "            train_pbar.update(1)\n",
+    "            train_pbar.set_postfix({'loss': f'{loss.item():.4f}'})\n",
     "        \n",
     "        # Evaluate on test set\n",
     "        model.eval()\n",
     "        correct = 0\n",
     "        total = 0\n",
+    "\n",
+    "        # Create progress bar for evaluation\n",
+    "        test_pbar = tqdm(test_loader, desc=f'Epoch {epoch+1}/{num_epochs} [Test]', leave=False)\n",
+    "        \n",
     "        with torch.no_grad():\n",
     "            for x_batch, y_batch in test_loader:\n",
     "                x_batch, y_batch = x_batch.to(device), y_batch.to(device)\n",
+    "                x_batch = x_batch.squeeze(1)\n",
     "                outputs = model(x_batch)\n",
     "                _, predicted = torch.max(outputs.data, 1)\n",
     "                total += y_batch.size(0)\n",
     "                correct += (predicted == y_batch).sum().item()\n",
+    "\n",
+    "                # Update progress bar description with current accuracy\n",
+    "                accuracy = correct / total\n",
+    "                test_pbar.update(1)\n",
+    "                test_pbar.set_postfix({'accuracy': f'{accuracy:.4f}'})\n",
     "        \n",
     "        accuracy = correct / total\n",
-    "        print(f'Epoch {epoch+1}/{num_epochs}, Accuracy: {accuracy:.4f}')\n",
+    "        print(f'Epoch {epoch+1}/{num_epochs}, Loss: {total_loss/len(train_loader):.4f}, Accuracy: {accuracy:.4f}')\n",
     "\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Training with direct tokenization:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample shape: torch.Size([32, 1, 221, 16])\n",
-      "Sample first element: tensor([[[0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         ...,\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.],\n",
-      "         [0., 0., 0.,  ..., 0., 0., 0.]]])\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "MS_VIT.__init__() missing 1 required positional argument: 'num_classes'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 14\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSample first element:\u001b[39m\u001b[38;5;124m'\u001b[39m, sample_batch[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m     12\u001b[0m num_classes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(label_encoder\u001b[38;5;241m.\u001b[39mclasses_)\n\u001b[0;32m---> 14\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mMS_VIT\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_classes\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m     15\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m Adam(model\u001b[38;5;241m.\u001b[39mparameters())\n\u001b[1;32m     16\u001b[0m criterion \u001b[38;5;241m=\u001b[39m CrossEntropyLoss()\n",
-      "\u001b[0;31mTypeError\u001b[0m: MS_VIT.__init__() missing 1 required positional argument: 'num_classes'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = {}\n",
-    "for method in ['direct', 'peak', 'fourier2', 'wavelet2']:\n",
+    "for method in ['peak', 'direct', 'fourier2', 'wavelet2']:\n",
     "    print(f\"\\nTraining with {method} tokenization:\")\n",
     "    \n",
     "    train_loader, test_loader = load_tokenized_data(method)\n",
@@ -450,15 +455,19 @@
     "    # Get a sample batch to determine input dimensions\n",
     "    sample_batch, _ = next(iter(train_loader))\n",
     "    print('Sample shape:', sample_batch.shape)\n",
-    "    print('Sample first element:', sample_batch[0])\n",
+    "    #print('Sample first element:', sample_batch[0])\n",
     "    \n",
     "    num_classes = len(label_encoder.classes_)\n",
+    "    embed_depth = sample_batch.shape[3]\n",
     "    \n",
-    "    model = MS_VIT(num_classes).to(device)\n",
-    "    optimizer = Adam(model.parameters())\n",
-    "    criterion = CrossEntropyLoss()\n",
+    "    model = MS_VIT(num_classes, embed_depth=embed_depth,\n",
+    "                   d_model=64, nhead=2, num_layers=2,\n",
+    "                   ).to(device)\n",
+    "    optimizer = optim.Adam(model.parameters())\n",
+    "    criterion = nn.CrossEntropyLoss()\n",
     "    \n",
-    "    model = train_model(model, train_loader, test_loader, optimizer, criterion)\n",
+    "    model = train_model(model, train_loader, test_loader, optimizer, criterion,\n",
+    "                        num_epochs=10)\n",
     "    \n",
     "    # Final evaluation\n",
     "    model.eval()\n",
