--- a/MS-ViT.ipynb
+++ b/MS-ViT.ipynb
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1536,10 +1536,10 @@
    ],
    "source": [
     "plt.figure()\n",
-    "plt.plot(loss_direct, label='direct')\n",
-    "plt.plot(loss_peaks, label='peak')\n",
-    "plt.plot(loss_fourier, label='fourier')\n",
-    "plt.plot(loss_wavelet, label='wavelet')\n",
+    "plt.plot(loss_direct, label='direct|acc:'+str(0.8621))\n",
+    "plt.plot(loss_peaks, label='peak|acc:'+str(0.0784))\n",
+    "plt.plot(loss_fourier, label='fourier|acc:'+str(0.2630))\n",
+    "plt.plot(loss_wavelet, label='wavelet|acc:'+str(0.8366))\n",
     "plt.legend()\n",
     "plt.title('Loss Convergence by Tokenization method')\n",
     "plt.xlabel('Epoch')\n",
