model loading and checkpoint functionality

--- a/ms_transformer_exploration.ipynb
+++ b/ms_transformer_exploration.ipynb
@@ -25,10 +25,10 @@
      "output_type": "stream",
      "text": [
       "CUDA is available.\n",
-      "PyTorch version: 2.1.0+cu121\n",
-      "CUDA version: 12.1\n",
+      "PyTorch version: 2.0.1+cu118\n",
+      "CUDA version: 11.8\n",
       "Number of available GPUs: 1\n",
-      "GPU name: NVIDIA GeForce RTX 4060 Laptop GPU\n"
+      "GPU name: NVIDIA GeForce RTX 3080\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1090/2621324627.py:1: DtypeWarning: Columns (6,7,10,12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_27644/2621324627.py:1: DtypeWarning: Columns (6,7,10,12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv('data/MoNA/in-silico.csv')\n"
      ]
     },
@@ -148,9 +148,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/kyle/anaconda3/envs/ml/lib/python3.11/site-packages/torch/nn/modules/transformer.py:282: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
-      "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n",
-      "Epoch 1/50 [Train]:   5%|▌         | 3000/57636 [06:49<2:08:53,  7.06it/s, loss=8.6970]"
+      "Epoch 1/50 [Train]:   5%|▍         | 2644/57636 [02:50<1:02:06, 14.76it/s, loss=8.1939]"
      ]
     }
    ],
