fixes to checkpointing

--- a/ms_transformer_exploration.ipynb
+++ b/ms_transformer_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,21 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUDA is available.\n",
-      "PyTorch version: 2.0.1+cu118\n",
-      "CUDA version: 11.8\n",
-      "Number of available GPUs: 1\n",
-      "GPU name: NVIDIA GeForce RTX 3080\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if torch.cuda.is_available():\n",
     "    print(\"CUDA is available.\")\n",
@@ -45,17 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using device: cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")"
@@ -63,25 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_27644/2621324627.py:1: DtypeWarning: Columns (6,7,10,12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('data/MoNA/in-silico.csv')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1844352, 17)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv('data/MoNA/in-silico.csv') \n",
     "print(df.shape)"
@@ -89,7 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.iloc[0:1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,46 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(19868,)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['molecular_formula'].unique().shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Training with direct tokenization:\n",
-      "Sample shape: torch.Size([32, 1, 221, 16])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/50 [Train]:   5%|▍         | 2644/57636 [02:50<1:02:06, 14.76it/s, loss=8.1939]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = {}\n",
     "for method in methods:\n",
@@ -175,7 +120,8 @@
     "    model, history = train_model(model, train_loader, test_loader, \n",
     "                                 optimizer, criterion, \n",
     "                                 evaluate=False, verbose=1,\n",
-    "                                 checkpoint_path=\"./model_checkpoints/\")\n",
+    "                                 checkpoint_path=\"./model_checkpoints/\",\n",
+    "                                 from_checkpoint=\"checkpoint_1\")\n",
     "    \n",
     "    # Final eval\n",
     "    model.eval()\n",
