--- a/ms_transformer_exploration.ipynb
+++ b/ms_transformer_exploration.ipynb
@@ -11,8 +11,7 @@
     "\n",
     "import torch\n",
     "import pandas as pd\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from tqdm.notebook import tqdm"
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
