cleaning up redundant code

--- a/MoNA_raw_exploration.ipynb
+++ b/MoNA_raw_exploration.ipynb
@@ -24,8 +24,7 @@
    "outputs": [],
    "source": [
     "json_pth = \"data/MoNA/MoNA-export-In-Silico_Spectra-json/\"\n",
-    "json_name = \"MoNA-export-In-Silico_Spectra.json\"\n",
-    "csv_pth = \"data/MoNA/in-silico.csv\""
+    "json_name = \"MoNA-export-In-Silico_Spectra.json\""
    ]
   },
   {
